swagger uraa
